--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.61.0-762.next
+  name: eclipse-che.v7.61.0-763.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -141,12 +141,12 @@ spec:
               images.
             displayName: Container registry
             path: containerRegistry
-          - description: Enables users to work with repositories hosted on Azure (dev.azure.com).
+          - description: Enables users to work with repositories hosted on Azure DevOps
+              Service (dev.azure.com).
             displayName: Azure
             path: gitServices.azure
           - description: 'Kubernetes secret, that contains Base64-encoded Azure DevOps
-              Application id and Azure DevOps Application Client secret. See the following
-              page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-azure'
+              Service Application ID and Client Secret. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-azure-devops-service'
             displayName: Secret Name
             path: gitServices.azure[0].secretName
             x-descriptors:
@@ -1231,7 +1231,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.61.0-762.next
+  version: 7.61.0-763.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
