--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -4428,7 +4428,8 @@ spec:
                     type: object
                   database:
                     description: Configuration settings related to the database used
-                      by the Che installation.
+                      by the Che installation. Database component is Deprecated. All
+                      properties will be ignored.
                     properties:
                       credentialsSecretName:
                         description: The secret that contains PostgreSQL `user` and
