--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -4442,7 +4442,8 @@ spec:
                     type: object
                   database:
                     description: Configuration settings related to the database used
-                      by the Che installation.
+                      by the Che installation. Database component is Deprecated. All
+                      properties will be ignored.
                     properties:
                       credentialsSecretName:
                         description: The secret that contains PostgreSQL `user` and
