--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.61.0-764.next
+  name: eclipse-che.v7.62.0-765.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -141,6 +141,13 @@ spec:
               images.
             displayName: Container registry
             path: containerRegistry
+          - description: Configuration settings related to the database used by the
+              Che installation. Database component is Deprecated. All properties will
+              be ignored.
+            displayName: Database
+            path: components.database
+            x-descriptors:
+              - urn:alm:descriptor:com.tectonic.ui:hidden
           - description: Enables users to work with repositories hosted on Azure DevOps
               Service (dev.azure.com).
             displayName: Azure
@@ -225,6 +232,7 @@ spec:
             path: postgresVersion
             x-descriptors:
               - urn:alm:descriptor:text
+              - urn:alm:descriptor:com.tectonic.ui:hidden
           - description: A brief CamelCase message indicating details about why the
               Che deployment is in the current phase.
             displayName: Reason
@@ -920,10 +928,6 @@ spec:
                         value: quay.io/eclipse/che-devfile-registry:next
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
                         value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
-                      - name: RELATED_IMAGE_postgres
-                        value: quay.io/eclipse/che--centos--postgresql-96-centos7:9.6-b681d78125361519180a6ac05242c296f8906c11eab7e207b5ca9a89b6344392
-                      - name: RELATED_IMAGE_postgres_13_3
-                        value: quay.io/eclipse/che--centos--postgresql-13-centos7:1-71b24684d64da46f960682cc4216222a7e4ed8b1a31dd5a865b3e71afdea20d2
                       - name: RELATED_IMAGE_single_host_gateway
                         value: quay.io/eclipse/che--traefik:v2.9.6-bb7be8d50edf73d8d3a812ac8873ef354a0fe9b40d7f3880747b43a3525855d2
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
@@ -950,8 +954,6 @@ spec:
                         value: /dashboard/assets/branding/loader.svg
                       - name: MAX_CONCURRENT_RECONCILES
                         value: "1"
-                      - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
-                        value: "false"
                     image: quay.io/eclipse/che-operator:next
                     imagePullPolicy: Always
                     livenessProbe:
@@ -1231,7 +1233,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.61.0-764.next
+  version: 7.62.0-765.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
