feat: Enable build capabilities by defau
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -6774,7 +6774,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
-                    default: true
+                    default: false
                     description: Disables the container build capabilities.
                     type: boolean
                   maxNumberOfRunningWorkspacesPerUser:
