--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -6945,7 +6945,7 @@ spec:
                         type: object
                       type: array
                     disableContainerBuildCapabilities:
-                      default: true
+                      default: false
                       description: Disables the container build capabilities.
                       type: boolean
                     maxNumberOfRunningWorkspacesPerUser:
