--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -6774,7 +6774,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
-                    default: true
+                    default: false
                     description: Disables the container build capabilities.
                     type: boolean
                   maxNumberOfRunningWorkspacesPerUser:
