Chore: CRW-4043 Add brew.Dockerfile. Move Dockerfile to build/dockerfiles. Update Makefile and git actions to reflect new location.
Signed-off-by: sdawley <sdawley@redhat.com>

--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Build operator image
         uses: docker/build-push-action@v3
         with:
-          file: Dockerfile
+          file: build/dockerfiles/Dockerfile
           platforms: linux/amd64,linux/ppc64le
           push: true
           tags: quay.io/eclipse/che-operator:next
