--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Build image
-      run: docker build .
+      run: docker build build/dockerfiles/
   multiplatform-image-build:
     runs-on: ubuntu-22.04
     steps:
@@ -43,7 +43,7 @@ jobs:
     - name: Build images
       uses: docker/build-push-action@v3
       with:
-        file: Dockerfile
+        file: build/dockerfiles/Dockerfile
         platforms: linux/amd64,linux/ppc64le
         tags: quay.io/eclipse/che-operator:next
   source-code-validation:
