--- a/deploy/deployment/kubernetes/objects/che-operator.Deployment.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator.Deployment.yaml
@@ -91,6 +91,14 @@ spec:
           value: /dashboard/assets/branding/loader.svg
         - name: MAX_CONCURRENT_RECONCILES
           value: "1"
+        - name: CHE_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
+          value: https://open-vsx.org
+        - name: CHE_SPEC_COMPONENTS_DASHBOARD_HEADERMESSAGE_TEXT
+          value: ""
+        - name: CHE_SPEC_DEVENVIRONMENTS_DEFAULTEDITOR
+          value: che-incubator/che-code/latest
+        - name: CHE_SPEC_DEVENVIRONMENTS_DEFAULTCOMPONENTS
+          value: '[{"name": "universal-developer-image", "container": {"image": "quay.io/devfile/universal-developer-image:ubi8-38da5c2"}}]'
         image: quay.io/eclipse/che-operator:next
         imagePullPolicy: Always
         livenessProbe:
