--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -31,3 +31,5 @@ entries:
     replaces: eclipse-che.v7.60.1
   - name: eclipse-che.v7.62.0
     replaces: eclipse-che.v7.61.0
+  - name: eclipse-che.v7.63.0
+    replaces: eclipse-che.v7.62.0
